--- a/packages/ignition/src/app/locales/home/home.en.mdx
+++ b/packages/ignition/src/app/locales/home/home.en.mdx
@@ -1,11 +1,12 @@
 ---
 title: React and React Native icones powered by Tailwind
-summary: "This is my first post!"
+summary: This is my first post!
 description: The icon library for your React or React Native project, customized using the Tailwind classes you already know
+type: component
+locale: en
 ---
 
-    # Icons your way and as you need them. On the Web or Mobile.
-
-
-    <p className="mt-6 text-md px-3 md:text-lg text-slate-600 text-center max-w-3xl mx-auto dark:text-slate-400">A biblioteca de ícones que você estava procurando. Funciona em React e em React Native, sem mudanças. Apenas um código, que roda onde você precisa. E com todo o poder que você já conheçe do <a className="text-sky-500" href="https://tailwindcss.com">Tailwind</a>.</p>
-
+    <h1 className="text-slate-900 font-extrabold text-3xl sm:text-4xl md:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">
+        Icons your way and as you need them. On the Web or Mobile.
+    </h1>
+    <p className="mt-6 text-md px-3 md:text-lg text-slate-600 text-center max-w-3xl mx-auto dark:text-slate-400">The icon library you've been looking for. Works in React and React Native without any changes. Just one code that runs wherever you need it. And with all the power you already know from <a className="text-sky-500" href="https://tailwindcss.com">Tailwind</a>.</p>
