--- a/packages/ignition/src/app/locales/home/home.en.mdx
+++ b/packages/ignition/src/app/locales/home/home.en.mdx
@@ -6,7 +6,5 @@ type: component
 locale: en
 ---
 
-    <h1 className="text-slate-900 font-extrabold text-3xl sm:text-4xl md:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">
-        Icons your way and as you need them. On the Web or Mobile.
-    </h1>
+    <h1 className="text-slate-900 font-extrabold text-3xl sm:text-4xl md:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">Icons your way and as you need them. On the Web or Mobile.</h1>
     <p className="mt-6 text-md px-3 md:text-lg text-slate-600 text-center max-w-3xl mx-auto dark:text-slate-400">The icon library you've been looking for. Works in React and React Native without any changes. Just one code that runs wherever you need it. And with all the power you already know from <a className="text-sky-500" href="https://tailwindcss.com">Tailwind</a>.</p>
