feat: better navigation and sidebar

--- a/packages/ignition/src/app/locales/components/home/home.en.mdx
+++ b/packages/ignition/src/app/locales/components/home/home.en.mdx
@@ -1,8 +1,8 @@
 ---
 title: React and React Native icones powered by Tailwind
-summary: This is my first post!
 description: The icon library for your React or React Native project, customized using the Tailwind classes you already know
 locale: en
+slug: home
 ---
 
     <h1 className="text-slate-900 font-extrabold text-3xl sm:text-4xl md:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">Icons your way and as you need them. On the Web or Mobile.</h1>
