--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -1,8 +1,8 @@
 ---
 title: Getting started
-summary: Getting started summary
 description: Getting started description
 locale: en
+slug: getting-started
 ---
 
     # Ok, lets see how you whould get started with rocketicons
