--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -1,12 +1,12 @@
 ---
 title: Primeiros passos
-summary: Começando a usar o rocketicons
-description: É assim que tudo começa
+description: Começando a usar o rocketicons
 locale: pt-br
+slug: primeiros-passos
 ---
 
     # Ok, vamos ver como isso funciona
 
 ```javascript
-console.log("Hello World");
+console.log("Olá, Mundo");
 ```
