--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -8,6 +8,7 @@
   "nav": {
     "docs": "Docs",
     "getting-started": "Getting Started",
+    "getting-started-slug": "getting-started",
     "icons": "Icons"
   },
   "search": "Quick seach"
