--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -8,6 +8,7 @@
   "nav": {
     "docs": "Docs",
     "getting-started": "Primeiros Passos",
+    "getting-started-slug": "primeiros-passos",
     "icons": "Icones"
   },
   "search": "Procurar"
