--- a/packages/ignition/src/app/locales/components/home/home.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/home/home.pt-br.mdx
@@ -1,8 +1,8 @@
 ---
 title: Ícones em React e React Native com o poder do Tailwind
-summary: Ícones em React e React Native com o poder do Tailwind
 description: The icon library for your React or React Native project, customized using the Tailwind classes you already know
 locale: pt-br
+slug: home
 ---
 
     <h1 className="text-slate-900 font-extrabold text-3xl sm:text-4xl md:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">Ícones do seu jeito e como você precisa. Na Web ou no Mobile.</h1>
