feat: rendering docs with hierarchy

--- a/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
@@ -3,6 +3,8 @@ title: Styling
 description: Styling description
 locale: en
 slug: styling
+group: usage
+order: 2
 ---
 
     # This is how you style a <span className="font-light">rocket</span><span className="font-semibold">icon</span>
