--- a/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
@@ -3,6 +3,8 @@ title: Estilização
 description: Descrição da estilização
 locale: pt-br
 slug: estilizando
+group: usage
+order: 2
 ---
 
     # Assim você estiliza um <span className="font-light">rocket</span><span className="font-semibold">icon</span>
