--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -8,7 +8,8 @@
   "nav": {
     "docs": "Docs",
     "getting-started": "Primeiros Passos",
-    "getting-started-slug": "primeiros-passos",
+    "getting-started-slug": "instalacao",
+    "usage": "Usando",
     "icons": "Icones"
   },
   "search": "Procurar"
