--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -8,13 +8,9 @@
   "nav": {
     "docs": "Docs",
     "getting-started": "Getting Started",
+    "getting-started-slug": "installation",
+    "usage": "Usage",
     "icons": "Icons"
   },
-  "search": "Quick seach",
-  "home": {
-    "title": "React and React Native icones powered by Tailwind",
-    "description": "The icon library for your React or React Native project, customized using the Tailwind classes you already know",
-    "hero": "# Icons your way and as you need them. On the Web or Mobile.",
-    "short": "A biblioteca de ícones que você estava procurando. Funciona em React e em React Native, sem mudanças. Apenas um código, que roda onde você precisa. E com todo o poder que você já conheçe do [Tailwind](https://tailwindcss.com)."
-  }
+  "search": "Quick seach"
 }
