language routing for docs

--- a/packages/ignition/src/app/locales/docs/docs-home.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/docs-home.pt-br.mdx
@@ -3,6 +3,7 @@ title: Documentação do RocketIcons
 description: Documentação para RocketIcons
 locale: pt-br
 slug: docs-home
+enslug: docs-home
 order: 1
 hide: true
 activeSelector: group-has-[.docs-docs-home]:active-content
