--- a/packages/ignition/src/app/locales/docs/getting-started/configuration.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/configuration.en.mdx
@@ -3,6 +3,7 @@ title: Configuration
 description: configuration
 locale: en
 slug: configuration
+enslug: configuration
 group: getting-started
 order: 2
 activeSelector: group-has-[.docs-configuration]:active-content
