--- a/packages/ignition/src/app/locales/docs/getting-started/configuration.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/configuration.pt-br.mdx
@@ -3,6 +3,7 @@ title: Configuração
 description: configuração
 locale: pt-br
 slug: configuracao
+enslug: configuration
 group: getting-started
 order: 2
 activeSelector: group-has-[.docs-configuracao]:active-content
