--- a/packages/ignition/src/app/locales/docs/getting-started/customization.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/customization.en.mdx
@@ -3,6 +3,7 @@ title: Customization
 description: customization
 locale: en
 slug: customization
+enslug: customization
 group: getting-started
 order: 3
 activeSelector: group-has-[.docs-customization]:active-content
