--- a/packages/ignition/src/app/locales/docs/getting-started/installation.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/installation.en.mdx
@@ -3,6 +3,7 @@ title: Installation
 description: installation
 locale: en
 slug: installation
+enslug: installation
 group: getting-started
 order: 1
 activeSelector: group-has-[.docs-installation]:active-content
