--- a/packages/ignition/src/app/locales/docs/getting-started/installation.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/installation.pt-br.mdx
@@ -3,6 +3,7 @@ title: Instalação
 description: instalação
 locale: pt-br
 slug: instalacao
+enslug: installation
 group: getting-started
 order: 1
 activeSelector: group-has-[.docs-instalacao]:active-content
