--- a/packages/ignition/src/app/locales/docs/usage/adding.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/adding.en.mdx
@@ -3,6 +3,7 @@ title: Adding Icons
 description: Adding icons to your application
 locale: en
 slug: adding-icons
+enslug: adding-icons
 group: usage
 order: 1
 activeSelector: group-has-[.docs-adding-icons]:active-content
