--- a/packages/ignition/src/app/locales/docs/usage/adding.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/adding.pt-br.mdx
@@ -3,6 +3,7 @@ title: Adicionando Ícones
 description: Adicionando ícones à sua aplicação
 locale: pt-br
 slug: adicionando-icones
+enslug: adding-icons
 group: usage
 order: 1
 activeSelector: group-has-[.docs-adicionando-icones]:active-content
