--- a/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
@@ -3,6 +3,7 @@ title: Colors
 description: Implementing colors in your application
 locale: en
 slug: colors
+enslug: colors
 group: usage
 order: 6
 activeSelector: group-has-[.docs-colors]:active-content
