--- a/packages/ignition/src/app/locales/docs/usage/dark-mode.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/dark-mode.pt-br.mdx
@@ -3,6 +3,7 @@ title: Modo Escuro
 description: Habilitando o modo escuro em sua aplicação
 locale: pt-br
 slug: modo-escuro
+enslug: dark-mode
 group: usage
 order: 3
 activeSelector: group-has-[.docs-modo-escuro]:active-content
