--- a/packages/ignition/src/app/locales/docs/usage/responsive-design.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/responsive-design.pt-br.mdx
@@ -3,6 +3,7 @@ title: Design Responsivo
 description: Implementando design responsivo em sua aplicação
 locale: pt-br
 slug: design-responsivo
+enslug: responsive-design
 group: usage
 order: 4
 activeSelector: group-has-[.docs-design-responsivo]:active-content
