--- a/packages/ignition/src/app/locales/docs/usage/sizing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing.en.mdx
@@ -3,6 +3,7 @@ title: Sizing Elements
 description: Implementing sizing for elements in your application
 locale: en
 slug: sizing-elements
+enslug: sizing-elements
 group: usage
 order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
