--- a/packages/ignition/src/app/locales/docs/usage/state-management.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/state-management.en.mdx
@@ -3,6 +3,7 @@ title: Hover, Focus and Other States
 description: Implementing colors and states in your application
 locale: en
 slug: state-management
+enslug: state-management
 group: usage
 order: 7
 activeSelector: group-has-[.docs-state-management]:active-content
