--- a/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
@@ -3,6 +3,7 @@ title: Estilização
 description: Descrição da estilização
 locale: pt-br
 slug: estilizando
+enslug: styling
 group: usage
 order: 2
 activeSelector: group-has-[.estilizando]:active-content
