--- a/packages/ignition/src/app/locales/docs/docs-home.en.mdx
+++ b/packages/ignition/src/app/locales/docs/docs-home.en.mdx
@@ -3,6 +3,7 @@ title: RocketIcons Documentation
 description: Documentation for RocketIcons
 locale: en
 slug: docs-home
+enslug: docs-home
 order: 1
 hide: true
 activeSelector: group-has-[.docs-docs-home]:active-content
