--- a/packages/ignition/src/app/locales/docs/getting-started/contributing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/contributing.en.mdx
@@ -3,6 +3,7 @@ title: Contributing
 description: contributing
 locale: en
 slug: contributing
+enslug: contributing
 group: getting-started
 order: 4
 activeSelector: group-has-[.docs-contributing]:active-content
