--- a/packages/ignition/src/app/locales/docs/getting-started/contributing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/contributing.pt-br.mdx
@@ -3,6 +3,7 @@ title: Contribuindo
 description: contribuindo
 locale: pt-br
 slug: contribuindo
+enslug: contributing
 group: getting-started
 order: 4
 activeSelector: group-has-[.docs-contribuindo]:active-content
