--- a/packages/ignition/src/app/locales/docs/getting-started/customization.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/customization.pt-br.mdx
@@ -3,6 +3,7 @@ title: Customização
 description: customização
 locale: pt-br
 slug: customizacao
+enslug: customization
 group: getting-started
 order: 3
 activeSelector: group-has-[.docs-customizacao]:active-content
