--- a/packages/ignition/src/app/locales/docs/usage/responsive-design.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/responsive-design.en.mdx
@@ -3,6 +3,7 @@ title: Responsive Design
 description: Implementing responsive design in your application
 locale: en
 slug: responsive-design
+enslug: responsive-design
 group: usage
 order: 4
 activeSelector: group-has-[.docs-responsive-design]:active-content
