--- a/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
@@ -3,6 +3,7 @@ title: Styling
 description: Styling description
 locale: en
 slug: styling
+enslug: styling
 group: usage
 order: 2
 activeSelector: group-has-[.docs-styling]:active-content
