docs title navigation working

--- a/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
@@ -6,7 +6,7 @@ slug: estilizando
 enslug: styling
 group: usage
 order: 2
-activeSelector: group-has-[.estilizando]:active-content
+activeSelector: group-has-[.docs-estilizando]:active-content
 ---
 
     # Assim você estiliza um <span className="font-light">rocket</span><span className="font-semibold">icon</span>
