--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started-pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started-pt-br.mdx
@@ -2,11 +2,10 @@
 title: Documentação do RocketIcons
 description: Documentação para RocketIcons
 locale: pt-br
-slug: docs-home
-enslug: docs-home
-order: 1
-hide: true
-activeSelector: group-has-[.docs-docs-home]:active-content
+slug: primeiros-passos
+enslug: getting-started
+order: 0
+activeSelector: group-has-[.docs-primeiros-passos]:active-content
 ---
 
     # Leia o manual!
