--- a/packages/ignition/src/app/locales/components/icons/icons-hero.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.pt-br.mdx
@@ -2,7 +2,8 @@
 title: Ícones para React e React-Native | um Plugin não official para Tailwind
 description: Descubra como incorporar facilmente ícones populares em seus projetos React e React-Native, utilizando o RocketIcons, um plugin não oficial do Tailwind, permitindo o compartilhamento de código entre aplicações web e nativas, fornecendo uma solução multiplataforma.
 locale: pt-br
-slug: icons
+slug: icons-hero
+enslug: icons-hero
 ---
 
     <h1 className="text-3xl md:text-4xl font-extrabold text-slate-900 tracking-tight dark:text-slate-200">Ícones para React e React-Native, fácil em uma solução cross-platform</h1>
