--- a/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
@@ -2,7 +2,8 @@
 title: Icons for React and React-Native in a non official Tailwind Plugin
 description: Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.
 locale: en
-slug: icons
+slug: icons-hero
+enslug: icons-hero
 ---
 
     <h1 className="text-3xl md:text-4xl font-extrabold text-slate-900 tracking-tight dark:text-slate-200">Icons on React or React-Native, easily in a cross-platform solution</h1>
