--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "motto": "Icons your way and as you need them. On the Web or Mobile.",
   "themes": {
     "dark": "Dark",
     "light": "Light",
