--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -1,4 +1,5 @@
 {
+  "motto": "Ícones do seu jeito e como você precisa. Na Web ou no Mobile.",
   "themes": {
     "dark": "Escuro",
     "light": "Claro",
