feat: new mdx component workflow

--- a/packages/ignition/src/app/locales/docs/getting-started/configuration.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/configuration.en.mdx
@@ -9,8 +9,6 @@ order: 2
 activeSelector: group-has-[.docs-configuration]:active-content
 ---
 
-    # Configuring the package
+# Configuring the package
 
-```javascript
-// here goes the code to configure the package
-```
+No additional configuration is required to start using RocketIcons in your projects.
