--- a/packages/ignition/src/app/locales/docs/getting-started/customization.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/customization.en.mdx
@@ -9,4 +9,6 @@ order: 3
 activeSelector: group-has-[.docs-customization]:active-content
 ---
 
-    # Customizing the package
+# Customization
+
+RocketIcons can be easily customized using Tailwind CSS classes to match your application's design.
