--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started-pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started-pt-br.mdx
@@ -8,4 +8,18 @@ order: 0
 activeSelector: group-has-[.docs-primeiros-passos]:active-content
 ---
 
-    # Leia o manual!
+import RocketIconsText from "@/components/rocketicons-text";
+import Usage from "../usage/usage.pt-br.mdx";
+
+# Introdução
+
+Bem-vindo à documentação do <RocketIconsText className="text-sky-500" />!
+Este componente fornece uma coleção de ícones para uso em seus projetos React web e React Native. O RocketIcons utiliza classes do Tailwind CSS para estilização, tornando fácil personalizar e integrar em suas aplicações.
+
+## Por que foi criado?
+
+O <RocketIconsText className="text-sky-500" /> foi criado para fornecer uma biblioteca de ícones simples e fácil de usar para desenvolvedores que desejam escrever um único código que possa funcionar tanto no React quanto no React Native.
+
+Os ícones foram projetados para serem facilmente personalizáveis e podem ser usados em aplicativos web e móveis.
+
+<Usage />
