--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -8,4 +8,34 @@ order: 0
 activeSelector: group-has-[.docs-getting-started]:active-content
 ---
 
-    # RTFM!
+import RocketIconsText from "@/components/rocketicons-text";
+import Usage from "../usage/usage.en.mdx";
+
+# Introduction
+
+Welcome to the documentation for <RocketIconsText className="text-slate-900 dark:text-white" />!
+This component provides a collection of icons for use in your **React** web and **React Native** projects.
+<RocketIconsText className="text-slate-900 dark:text-white" /> utilizes **Tailwind CSS** classes for styling, making it easy to customize and integrate into your applications.
+
+# Why it was created?
+
+<RocketIconsText className="text-slate-900 dark:text-white" /> was created to provide a simple and
+easy-to-use icon library for developers who wish to write a single code that can
+work both in **React** web and **React Native**. We were motivated by the existence of great
+tools such as
+[Tailwind CSS](https://tailwindcss.com/),
+[Expo](https://expo.dev/) and
+<a
+  href="https://react-icons.github.io/react-icons/"
+  target="_blank"
+  rel="noopener noreferrer"
+>React Icons</a>.
+These tools are great and we love them but we wanted to create an even easier experience
+ for developers working with multiple platforms with the same codebase.
+
+The icons are designed to be easily customizable and can be used in both web
+and mobile applications.
+
+**Write once, use everywhere!**
+
+<Usage />
