--- a/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
@@ -8,4 +8,16 @@ order: 0
 activeSelector: group-has-[.docs-usage]:active-content
 ---
 
-    # This is how we use it
+# This is how we use it
+
+First, you need to import the component:
+
+```tsx
+import { RcRocketIcon } from "rocketicons/rc";
+```
+
+Then, you can use it in your component:
+
+```tsx
+<RocketIconsText />
+```
