--- a/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
@@ -8,4 +8,16 @@ order: 0
 activeSelector: group-has-[.docs-usando]:active-content
 ---
 
-    # É assim que a gente usa
+# Como usar
+
+Primeiro, você precisa importar o componente:
+
+```tsx
+import { RcRocketIcon } from "rocketicons/rc";
+```
+
+Então, você pode usar o componente assim:
+
+```tsx
+<RocketIconsText />
+```
