--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -25,11 +25,7 @@ work both in **React** web and **React Native**. We were motivated by the existe
 tools such as
 [Tailwind CSS](https://tailwindcss.com/),
 [Expo](https://expo.dev/) and
-<a
-  href="https://react-icons.github.io/react-icons/"
-  target="_blank"
-  rel="noopener noreferrer"
->React Icons</a>.
+[React Icons](https://react-icons.github.io/react-icons/).
 These tools are great and we love them but we wanted to create an even easier experience
  for developers working with multiple platforms with the same codebase.
 
