Update icons hero content

--- a/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: Icons for React and React-Native in a non official Tailwind Plugin
+title: Icons for React and React-Native | The non official Tailwind Plugin
 description: Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.
 locale: en
 slug: icons-hero
