Add initial colors components

--- a/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.en.mdx
@@ -6,5 +6,7 @@ slug: icons-hero
 enslug: icons-hero
 ---
 
-    <h1 className="text-3xl md:text-4xl font-extrabold text-slate-900 tracking-tight dark:text-slate-200">Icons on React or React-Native, easily in a cross-platform solution</h1>
-    <p className="my-5 tracking-tight text-lg text-slate-700 dark:text-slate-400 min-[714px]:mb-12 md:tracking-normal md:mb-10 min-[1218px]:mb-16">Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.</p>
+import { Title, Highlight } from "@/components/documentation";
+
+    <Title>Icons on React or React-Native, easily in a cross-platform solution</Title>
+    <Highlight>Discover how to easily incorporate popular icons into your React and React-Native, a non official Tailwind Plugin projects using RocketIcons, enabling code sharing between web and native applications, providing a cross-platform solution.</Highlight>
