--- a/packages/ignition/src/app/locales/components/icons/icons-hero.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/icons/icons-hero.pt-br.mdx
@@ -6,5 +6,7 @@ slug: icons-hero
 enslug: icons-hero
 ---
 
-    <h1 className="text-3xl md:text-4xl font-extrabold text-slate-900 tracking-tight dark:text-slate-200">Ícones para React e React-Native, fácil em uma solução cross-platform</h1>
-    <p className="my-5 tracking-tight text-lg text-slate-700 dark:text-slate-400 min-[714px]:mb-12 md:tracking-normal md:mb-10 min-[1218px]:mb-16">Descubra como incorporar facilmente ícones populares em seus projetos React e React-Native, utilizando o RocketIcons, um plugin não oficial do Tailwind, permitindo o compartilhamento de código entre aplicações web e nativas, fornecendo uma solução multiplataforma.</p>
+import { Title, Highlight } from "@/components/documentation";
+
+    <Title>Ícones para React e React-Native, fácil em uma solução cross-platform</Title>
+    <Highlight>Descubra como incorporar facilmente ícones populares em seus projetos React e React-Native, utilizando o RocketIcons, um plugin não oficial do Tailwind, permitindo o compartilhamento de código entre aplicações web e nativas, fornecendo uma solução multiplataforma.</Highlight>
