--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.pt-br.mdx
@@ -1,15 +1,12 @@
 ---
 title: Configuração
 description: configuração
-locale: pt-br
 slug: configuracao
-enslug: configuration
-group: getting-started
 order: 2
 activeSelector: group-has-[.docs-configuracao]:active-content
 ---
 
-    # Configurando o pacote
+# Configuração
 
 ```javascript
 // aqui vai o código para configurar o pacote
