--- a/packages/ignition/src/app/locales/docs/getting-started/components/contributing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/contributing.pt-br.mdx
@@ -1,12 +1,9 @@
 ---
 title: Contribuindo
 description: contribuindo
-locale: pt-br
 slug: contribuindo
-enslug: contributing
-group: getting-started
 order: 4
 activeSelector: group-has-[.docs-contribuindo]:active-content
 ---
 
-    # Contribuindo para o pacote
+# Contribuindo
