--- a/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
@@ -1,12 +1,9 @@
 ---
 title: Customização
 description: customização
-locale: pt-br
 slug: customizacao
-enslug: customization
-group: getting-started
 order: 3
 activeSelector: group-has-[.docs-customizacao]:active-content
 ---
 
-    # Personalizando o pacote
+# Customização
