--- a/packages/ignition/src/app/locales/docs/getting-started/components/installation.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/installation.en.mdx
@@ -1,15 +1,11 @@
 ---
 title: Installation
 description: installation
-locale: en
 slug: installation
-enslug: installation
-group: getting-started
 order: 1
 activeSelector: group-has-[.docs-installation]:active-content
 ---
 
-import { RcRocketIcon } from "rocketicons/rc";
 import RocketIconsText from "@/components/rocketicons-text";
 
 ## Installation
@@ -38,7 +34,4 @@ or even
 bun install rocketicons
 ```
 
-That's it! You're ready to start using the icons in your project.
-
-<RcRocketIcon className="w-32 h-32" />
-<RocketIconsText className="text-slate-900 dark:text-white" />
+That's it! You're ready to start using the <RocketIconsText className="text-slate-900 dark:text-white" /> in your project.
