--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -1,23 +1,26 @@
 ---
 title: RocketIcons Documentation
 description: Documentation for RocketIcons
-locale: en
 slug: getting-started
-enslug: getting-started
 order: 0
 activeSelector: group-has-[.docs-getting-started]:active-content
 ---
 
 import RocketIconsText from "@/components/rocketicons-text";
-import Usage from "../usage/usage.en.mdx";
+import Installation from "./components/installation.en.mdx";
+import Configuration from "./components/configuration.en.mdx";
+import Customization from "./components/customization.en.mdx";
+import Contributing from "./components/contributing.en.mdx";
 
-# Introduction
+# Getting Started
+
+## Introduction
 
 Welcome to the documentation for <RocketIconsText className="text-slate-900 dark:text-white" />!
 This component provides a collection of icons for use in your **React** web and **React Native** projects.
 <RocketIconsText className="text-slate-900 dark:text-white" /> utilizes **Tailwind CSS** classes for styling, making it easy to customize and integrate into your applications.
 
-# Why it was created?
+## Why it was created?
 
 <RocketIconsText className="text-slate-900 dark:text-white" /> was created to provide a simple and
 easy-to-use icon library for developers who wish to write a single code that can
@@ -34,4 +37,10 @@ and mobile applications.
 
 **Write once, use everywhere!**
 
-<Usage />
+<Installation />
+
+<Configuration />
+
+<Customization />
+
+<Contributing />
