--- a/packages/ignition/src/app/locales/docs/usage/adding.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/adding.en.mdx
@@ -1,17 +1,14 @@
 ---
 title: Adding Icons
 description: Adding icons to your application
-locale: en
 slug: adding-icons
-enslug: adding-icons
-group: usage
 order: 1
 activeSelector: group-has-[.docs-adding-icons]:active-content
 ---
 
 import RocketIconsText from "@/components/rocketicons-text";
 
-# How to Add Icons
+# Adding Icons
 
 To add an icon to your application, follow these steps:
 
@@ -24,3 +21,6 @@ import { RcRocketIcons } from 'rocketicons';
 2. Use the <RocketIconsText className="text-slate-900 dark:text-white" /> component in your code, specifying the desired icon name as a prop.
 
 Here's an example of how to add a rocket icon:
+
+
+adding-icons.en.mdx
