--- a/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
@@ -8,7 +8,7 @@ order: 0
 activeSelector: group-has-[.docs-usage]:active-content
 ---
 
-# This is how we use it
+# usage
 
 First, you need to import the component:
 
