--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
@@ -1,14 +1,11 @@
 ---
 title: Configuration
 description: configuration
-locale: en
 slug: configuration
-enslug: configuration
-group: getting-started
 order: 2
 activeSelector: group-has-[.docs-configuration]:active-content
 ---
 
-# Configuring the package
+## Configuration
 
 No additional configuration is required to start using RocketIcons in your projects.
