--- a/packages/ignition/src/app/locales/docs/getting-started/components/installation.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/installation.pt-br.mdx
@@ -1,17 +1,14 @@
 ---
 title: Instalação
 description: instalação
-locale: pt-br
 slug: instalacao
-enslug: installation
-group: getting-started
 order: 1
 activeSelector: group-has-[.docs-instalacao]:active-content
 ---
 
 # Começando a usaro <span className="font-light">rocket</span><span className="font-semibold">icons</span>
 
-## Instale o pacote
+## Instalação
 
 ```javascript
 npm install @rocketclimb/icons
