WIP add sizing documentation

--- a/packages/ignition/src/app/locales/docs/usage/sizing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing.en.mdx
@@ -9,9 +9,11 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
-# How to Size Elements
+import { Title, Highlight } from "@/components/documentation";
 
-To size elements in your application, follow these steps:
+<Title>How to Size Elements</Title>
+
+<Highlight>To size elements in your application, follow these steps:</Highlight>
 
 1. Use CSS properties like `width`, `height`, `padding`, and `margin` to control the size of elements.
 2. Use relative units like percentages or viewport units (`vw`, `vh`) to make elements responsive to different screen sizes.
