--- a/packages/ignition/src/app/locales/docs/usage/sizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing.pt-br.mdx
@@ -9,9 +9,11 @@ order: 5
 activeSelector: group-has-[.docs-dimensionando-elementos]:active-content
 ---
 
-# Como Dimensionar Elementos
+import { Title, Highlight } from "@/components/documentation";
 
-Para dimensionar elementos em sua aplicação, siga estes passos:
+    <Title>Como Dimensionar Elementos</Title>
+
+    <Highlight>Para dimensionar elementos em sua aplicação, siga estes passos:</Highlight>
 
 1. Use propriedades CSS como `width`, `height`, `padding` e `margin` para controlar o tamanho dos elementos.
 2. Use unidades relativas como porcentagens ou unidades de viewport (`vw`, `vh`) para tornar os elementos responsivos a diferentes tamanhos de tela.
