--- a/packages/ignition/src/app/locales/docs/usage/components/colors-selector.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-selector.en.mdx
@@ -1,10 +1,8 @@
 ---
 title: Colors Selector
 description: No description
-locale: en
 slug: colors-selector
-enslug: colors-selector
-group: usage
+group: colors
 order: 6
 activeSelector: group-has-[.docs-colors]:active-content
 ---
