--- a/packages/ignition/src/app/locales/docs/usage/components/colors-selector.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-selector.pt-br.mdx
@@ -1,10 +1,8 @@
 ---
 title: Seletor de cores
 description: No description
-locale: pt-br
 slug: seletor-de-cores
-enslug: colors-selector
-group: usage
+group: colors
 order: 6
 activeSelector: group-has-[.docs-colors]:active-content
 ---
