--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: RocketIcons Documentation
+title: Getting Started
 description: Documentation for RocketIcons
 slug: getting-started
 order: 0
