--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -1,5 +1,5 @@
 ---
-title: Documentação do RocketIcons
+title: Primeiros Passos
 description: Documentação para RocketIcons
 slug: primeiros-passos
 order: 0
