--- a/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
@@ -6,4 +6,14 @@ order: 3
 activeSelector: group-has-[.docs-customizacao]:active-content
 ---
 
-# Customização
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
+
+import { SiReact, SiTailwindcss } from 'rocketicons/si';
+
+## Customização
+
+<RocketIconsTextDefault /> pode ser facilmente personalizado em cada uso usando classes do **Tailwind** <SiTailwindcss className="-mt-1" /> para combinar com o design de sua aplicação.
+
+Você também pode criar componentes **React** <SiReact className="-mt-1 icon-sky-800" /> em seu projeto que estendem o componente padrão e adicionam seus estilos personalizados.
+
+Novamente, sempre usando as classes do **Tailwind** <SiTailwindcss className="-mt-1" />.
