--- a/packages/ignition/src/app/locales/docs/getting-started/components/installation.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/installation.en.mdx
@@ -6,11 +6,11 @@ order: 1
 activeSelector: group-has-[.docs-installation]:active-content
 ---
 
-import RocketIconsText from "@/components/rocketicons-text";
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 
 ## Installation
 
-To install <RocketIconsText className="text-slate-900 dark:text-white" />, simply run the following command in your terminal:
+To install <RocketIconsTextDefault />, simply run the following command in your terminal:
 
 ```bash
 npm install rocketicons
@@ -34,4 +34,6 @@ or even
 bun install rocketicons
 ```
 
-That's it! You're ready to start using the <RocketIconsText className="text-slate-900 dark:text-white" /> in your project.
+Boom!
+
+Now that you have installed <RocketIconsTextDefault /> in your project, you can proceed to the configuration.
