--- a/packages/ignition/src/app/locales/docs/getting-started/components/installation.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/installation.pt-br.mdx
@@ -6,12 +6,34 @@ order: 1
 activeSelector: group-has-[.docs-instalacao]:active-content
 ---
 
-# Começando a usaro <span className="font-light">rocket</span><span className="font-semibold">icons</span>
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 
 ## Instalação
 
-```javascript
-npm install @rocketclimb/icons
+Para instalar <RocketIconsTextDefault />, simplesmente execute o seguinte comando no seu terminal:
+
+```bash
+npm install rocketicons
 ```
 
-E é isso! Agora você pode começar a usar os ícones em seu projeto.
+ou
+
+```bash
+pnpm install rocketicons
+```
+
+ou
+
+```bash
+yarn install rocketicons
+```
+
+ou até mesmo
+
+```bash
+bun install rocketicons
+```
+
+Boom!
+
+Agora que você instalou <RocketIconsTextDefault /> no seu projeto, você pode prosseguir para a configuração.
