--- a/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/configuration.en.mdx
@@ -6,6 +6,25 @@ order: 2
 activeSelector: group-has-[.docs-configuration]:active-content
 ---
 
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
+
 ## Configuration
 
-No additional configuration is required to start using RocketIcons in your projects.
+In order to use <RocketIconsTextDefault />  in your projects, you need to have a minimum setup.
+
+You need to have tailwind on your project and, of course, the `tailwind.config.js` file.
+
+On that file, import the plugin and add it to the `plugins` array like this:
+
+```js
+// tailwind.config.js
+import icons from "rocketicons/tailwind";
+
+...
+plugins: [
+  icons
+],
+...
+```
+
+After that, you can use <RocketIconsTextDefault /> on your project.
