--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -6,29 +6,34 @@ order: 0
 activeSelector: group-has-[.docs-getting-started]:active-content
 ---
 
-import RocketIconsText from "@/components/rocketicons-text";
+import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
 import Installation from "./components/installation.en.mdx";
 import Configuration from "./components/configuration.en.mdx";
 import Customization from "./components/customization.en.mdx";
 import Contributing from "./components/contributing.en.mdx";
+import { SiReact, SiTailwindcss, SiExpo } from 'rocketicons/si';
 
 # Getting Started
 
 ## Introduction
 
-Welcome to the documentation for <RocketIconsText className="text-slate-900 dark:text-white" />!
-This component provides a collection of icons for use in your **React** web and **React Native** projects.
-<RocketIconsText className="text-slate-900 dark:text-white" /> utilizes **Tailwind CSS** classes for styling, making it easy to customize and integrate into your applications.
+Welcome to the documentation for <RocketIconsTextDefault />!
+This component provides a collection of icons for use in your <SiReact className="-mt-1 icon-sky-800" /> **React** web and **React Native** projects.
+<RocketIconsTextDefault /> utilizes <SiTailwindcss className="-mt-1" /> **Tailwind CSS** classes for styling, making it easy to customize and integrate into your applications.
 
 ## Why it was created?
 
-<RocketIconsText className="text-slate-900 dark:text-white" /> was created to provide a simple and
+<RocketIconsTextDefault /> was created to provide a simple and
 easy-to-use icon library for developers who wish to write a single code that can
-work both in **React** web and **React Native**. We were motivated by the existence of great
+work both in **React** web and **React Native**.
+
+
+We were motivated by the existence of great
 tools such as
-[Tailwind CSS](https://tailwindcss.com/),
-[Expo](https://expo.dev/) and
-[React Icons](https://react-icons.github.io/react-icons/).
+[<SiTailwindcss className="-mt-1" /> Tailwind CSS](https://tailwindcss.com/),
+[<SiExpo className="-mt-1" /> Expo](https://expo.dev/),
+[<SiReact className="-mt-1 icon-sky-500" /> NativeWind](https://nativewind.dev) and
+[<SiReact className="-mt-1 icon-red-800" /> React Icons](https://react-icons.github.io/react-icons/).
 These tools are great and we love them but we wanted to create an even easier experience
  for developers working with multiple platforms with the same codebase.
 
