--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -3,7 +3,7 @@ title: Primeiros Passos
 description: Documentação para RocketIcons
 slug: primeiros-passos
 order: 0
-activeSelector: group-has-[.docs-getting-started]:active-content
+activeSelector: group-has-[.docs-primeiros-passos]:active-content
 ---
 
 import RocketIconsText, { RocketIconsTextDefault } from "@/components/rocketicons-text";
